--- a/assets/js/i18n/ge.json
+++ b/assets/js/i18n/ge.json
@@ -1,1 +1,347 @@
-{}
+{
+	"common": {
+		"siteName": "Dentiluri",
+		"phone": "(555) 123-4567",
+		"bookAppointment": "ვიზიტის დაჯავშნა",
+		"learnMore": "მეტის გაგება",
+		"contactUs": "დაგვიკავშირდით"
+	},
+	"nav": {
+		"home": "მთავარი",
+		"about": "ჩვენს შესახებ",
+		"services": "სერვისები",
+		"appointment": "ჯავშანი",
+		"contact": "კონტაქტი"
+	},
+	"footer": {
+		"copyright": "© {0} Dentiluri. ყველა უფლება დაცულია.",
+		"privacyPolicy": "კონფიდენციალურობის პოლიტიკა",
+		"termsOfService": "მომსახურების პირობები"
+	},
+	"home": {
+		"hero": {
+			"title": "ჯანსაღი და ლამაზი ღიმილი - მარტივად!",
+			"subtitle": "ჩვენი სტომატოლოგები უზრუნველყოფენ თქვენი პირის ღრუს ჯანმრთელობასა და თქვენს ბედნიერ ღიმილს."
+		},
+		"services": {
+			"title": "სრული სტომატოლოგიური მომსახურება",
+			"subtitle": "ჩვენ გთავაზობთ სტომატოლოგიური სერვისების ფართო სპექტრს, რათა დავაკმაყოფილოთ თქვენი პირის ღრუს ჯანმრთელობის ყველა საჭიროება ერთ მოხერხებულ ადგილზე.",
+			"badge": "რატომ აგვირჩიოთ ჩვენ",
+			"preventiveCare": {
+				"title": "პრევენციული მოვლა",
+				"description": "რეგულარული შემოწმებები, წმენდა და სკრინინგები სტომატოლოგიური პრობლემების პრევენციისთვის მათ დაწყებამდე."
+			},
+			"cosmeticDentistry": {
+				"title": "ესთეტიკური სტომატოლოგია",
+				"description": "გააუმჯობესეთ თქვენი ღიმილი კბილების გათეთრებით, ვინირებით და სხვა კოსმეტიკური პროცედურებით."
+			},
+			"restorativeServices": {
+				"title": "აღდგენითი სერვისები",
+				"description": "დაზიანებული კბილების შეკეთება ბჟენით, გვირგვინებით, ხიდებით და დენტალური იმპლანტებით."
+			},
+			"familyDentistry": {
+				"title": "საოჯახო სტომატოლოგია",
+				"description": "სტომატოლოგიური მომსახურება ყველა ასაკის პაციენტისთვის, ბავშვებიდან ხანდაზმულებამდე."
+			},
+			"emergencyCare": {
+				"title": "გადაუდებელი დახმარება",
+				"description": "სწრაფი მკურნალობა სტომატოლოგიური გადაუდებელი შემთხვევებისთვის, როგორიცაა კბილის ტკივილი ან გატეხილი კბილები."
+			},
+			"advancedTechnology": {
+				"title": "თანამედროვე ტექნოლოგიები",
+				"description": "უახლესი აღჭურვილობა და ტექნიკა უფრო კომფორტული და ეფექტური მკურნალობისთვის."
+			}
+		},
+		"team": {
+			"title": "გაიცანით ჩვენი სტომატოლოგიური გუნდი",
+			"subtitle": "ჩვენი გამოცდილი სტომატოლოგები და პერსონალი ერთგულია უმაღლესი ხარისხის მომსახურების გაწევისა.",
+			"meetFullTeam": "გაიცანით ჩვენი სრული გუნდი"
+		},
+		"testimonials": {
+			"title": "რას ამბობენ ჩვენი პაციენტები",
+			"badge": "გამოხმაურებები"
+		},
+		"appointment": {
+			"title": "დაჯავშნეთ თქვენი ვიზიტი",
+			"subtitle": "ჩვენ ვიღებთ ახალ პაციენტებს! დაჯავშნეთ თქვენი ვიზიტი ონლაინ ან დაგვირეკეთ.",
+			"badge": "დაგეგმეთ ვიზიტი",
+			"convenientScheduling": {
+				"title": "მოხერხებული დაჯავშნა",
+				"description": "დაჯავშნეთ ონლაინ 24/7 ან დარეკეთ სამუშაო საათებში"
+			},
+			"extendedHours": {
+				"title": "გახანგრძლივებული საათები",
+				"description": "ვმუშაობთ საღამოს საათებშიც და შერჩეულ შაბათებში თქვენი კომფორტისთვის"
+			},
+			"insuranceAccepted": {
+				"title": "დაზღვევის მიღება",
+				"description": "ჩვენ ვთანამშრომლობთ უმეტეს მთავარ სადაზღვევო კომპანიებთან"
+			},
+			"scheduleNow": "დაჯავშნეთ ახლავე"
+		},
+		"contact": {
+			"title": "დაგვიკავშირდით",
+			"subtitle": "გაქვთ შეკითხვები ან მზად ხართ დასაჯავშნად? დაუკავშირდით ჩვენს მეგობრულ გუნდს.",
+			"location": {
+				"title": "მდებარეობა",
+				"address": "123 Dental Way, Cityville, ST 12345"
+			},
+			"phone": {
+				"title": "ტელეფონი"
+			},
+			"hours": {
+				"title": "სამუშაო საათები",
+				"weekdays": "ორშაბათი-პარასკევი: 8:00-18:00",
+				"saturday": "შაბათი: 9:00-14:00 (შერჩეულ თარიღებში)",
+				"sunday": "კვირა: დასვენება"
+			},
+			"form": {
+				"firstName": "სახელი",
+				"lastName": "გვარი",
+				"email": "ელ-ფოსტა",
+				"message": "შეტყობინება",
+				"placeholder": "როგორ შეგვიძლია დაგეხმაროთ?",
+				"sendMessage": "შეტყობინების გაგზავნა",
+				"success": "თქვენი შეტყობინება გაგზავნილია. მალე დაგიკავშირდებით!",
+				"sending": "იგზავნება..."
+			}
+		}
+	},
+	"about": {
+		"hero": {
+			"title": "Dentiluri-ს შესახებ",
+			"subtitle": "ვაწვდით გამორჩეულ სტომატოლოგიურ მომსახურებას ჩვენს საზოგადოებას 20 წელზე მეტია."
+		},
+		"story": {
+			"title": "ჩვენი ისტორია",
+			"content1": "Dentiluri დაარსდა 2003 წელს დოქტორ სარა ჯონსონის მიერ მარტივი მისიით: მაღალი ხარისხის, თანაგრძნობითი სტომატოლოგიური მომსახურების გაწევა ყველა ასაკის პაციენტებისთვის. რაც დაიწყო, როგორც პატარა პრაქტიკა, გაიზარდა და გახდა სანდო სტომატოლოგიური მომსახურების მიმწოდებელი ჩვენს საზოგადოებაში.",
+			"content2": "ჩვენი გამოცდილი სტომატოლოგების, ჰიგიენისტების და პერსონალის გუნდი ერთგულია, რომ თქვენი სტომატოლოგიური გამოცდილება იყოს რაც შეიძლება კომფორტული და სტრეს-თავისუფალი. ჩვენ გვჯერა ჩვენს პაციენტებთან გრძელვადიანი ურთიერთობების შენების, რომელიც ეფუძნება ნდობას, პატივისცემას და გამორჩეულ ზრუნვას.",
+			"content3": "Dentiluri-ში ჩვენ ვდგავართ სტომატოლოგიური ტექნოლოგიების და ტექნიკების წინა ხაზზე, რათა უზრუნველვყოთ, რომ თქვენ მიიღოთ ყველაზე ეფექტური და კომფორტული მკურნალობა."
+		},
+		"team": {
+			"title": "ჩვენი გუნდი",
+			"subtitle": "გაიცანით ის ერთგული პროფესიონალები, რომლებიც Dentiluri-ს განსაკუთრებულს ხდიან."
+		},
+		"mission": {
+			"title": "ჩვენი მისია და ღირებულებები",
+			"content": "Dentiluri-ში ჩვენი მისიაა გავაუმჯობესოთ ჩვენი საზოგადოების პირის ღრუს ჯანმრთელობა ყოვლისმომცველი, პერსონალიზებული სტომატოლოგიური მომსახურების მიწოდებით კომფორტულ და სტუმართმოყვარე გარემოში.",
+			"values": {
+				"excellence": {
+					"title": "სრულყოფილება",
+					"description": "ჩვენ ვცდილობთ სრულყოფილებას ჩვენი პრაქტიკის ყველა ასპექტში, კლინიკური მოვლიდან მომხმარებელთა მომსახურებამდე."
+				},
+				"compassion": {
+					"title": "თანაგრძნობა",
+					"description": "ჩვენ ვეპყრობით თითოეულ პაციენტს სიკეთით, ემპათიით და პატივისცემით, გვესმის, რომ სტომატოლოგიური ვიზიტები ბევრისთვის სტრესული შეიძლება იყოს."
+				},
+				"education": {
+					"title": "განათლება",
+					"description": "ჩვენ გვჯერა, რომ ვაძლიერებთ ჩვენს პაციენტებს ცოდნით მათი პირის ღრუს ჯანმრთელობის შესახებ, რათა მათ შეძლონ ინფორმირებული გადაწყვეტილებების მიღება."
+				},
+				"innovation": {
+					"title": "ინოვაცია",
+					"description": "ჩვენ მუდმივად ვინვესტირებთ მოწინავე ტექნოლოგიებსა და ტექნიკებში, რათა უზრუნველვყოთ საუკეთესო შესაძლო მოვლა."
+				}
+			}
+		},
+		"facility": {
+			"title": "ჩვენი დაწესებულება",
+			"subtitle": "ჩვენი თანამედროვე სტომატოლოგიური ოფისი შექმნილია თქვენი კომფორტის გათვალისწინებით."
+		},
+		"cta": {
+			"title": "მზად ხართ დასაგეგმად?",
+			"subtitle": "ჩვენ ვიღებთ ახალ პაციენტებს და გვიხარია მოგესალმოთ ჩვენს სტომატოლოგიურ ოჯახში."
+		}
+	},
+	"services": {
+		"hero": {
+			"title": "ჩვენი სტომატოლოგიური სერვისები",
+			"subtitle": "ყოვლისმომცველი სტომატოლოგიური მომსახურება მთელი ოჯახისთვის, ერთ მოხერხებულ ადგილზე."
+		},
+		"preventive": {
+			"badge": "პრევენციული მოვლა",
+			"title": "შეინარჩუნეთ თქვენი ღიმილი",
+			"content": "რეგულარული პრევენციული მოვლა არის კარგი პირის ღრუს ჯანმრთელობის საფუძველი. ჩვენი ყოვლისმომცველი პრევენციული სერვისები დაგეხმარებათ შეინარჩუნოთ ჯანმრთელი ღიმილი და თავიდან აიცილოთ სტომატოლოგიური პრობლემები მათ დაწყებამდე.",
+			"services": [
+				"რეგულარული სტომატოლოგიური შემოწმებები და წმენდა",
+				"ციფრული რენტგენი მინიმალური რადიაციით",
+				"პირის ღრუს კიბოს სკრინინგი",
+				"ფტორიდის მკურნალობა",
+				"სტომატოლოგიური სილანტები",
+				"ინდივიდუალური პირის დამცავები და ღამის დამცავები"
+			]
+		},
+		"cosmetic": {
+			"badge": "ესთეტიკური სტომატოლოგია",
+			"title": "გააუმჯობესეთ თქვენი ღიმილი",
+			"content": "ჩვენი ესთეტიკური სტომატოლოგიური სერვისები დაგეხმარებათ მიაღწიოთ ლამაზ, თავდაჯერებულ ღიმილს, რომელიც ყოველთვის გსურდათ. ჩვენ გთავაზობთ მკურნალობის სპექტრს გაუფერულების, არასწორი განლაგების და სხვა ესთეტიკური პრობლემების გადასაჭრელად.",
+			"services": [
+				"პროფესიონალური კბილების გათეთრება",
+				"ფაიფურის ვინირები",
+				"სტომატოლოგიური დაბონდვა",
+				"კბილის ფერის ბჟენები",
+				"ღიმილის გარდაქმნა",
+				"Invisalign გამჭვირვალე კაპები"
+			]
+		},
+		"restorative": {
+			"badge": "აღდგენითი სტომატოლოგია",
+			"title": "აღადგინეთ თქვენი ღიმილი",
+			"content": "ჩვენი აღდგენითი სტომატოლოგიური სერვისები დაგეხმარებათ დაზიანებული კბილების შეკეთებაში და დაკარგული კბილების ჩანაცვლებაში, აღადგენს როგორც ფუნქციას, ასევე თქვენი ღიმილის გარეგნობას.",
+			"services": [
+				"სტომატოლოგიური ბჟენები",
+				"სტომატოლოგიური გვირგვინები და ხიდები",
+				"სტომატოლოგიური იმპლანტები",
+				"სრული და ნაწილობრივი პროთეზები",
+				"ფესვის არხის თერაპია",
+				"ჩანართები და სავარძლები"
+			]
+		},
+		"specialized": {
+			"title": "სპეციალიზებული სერვისები",
+			"subtitle": "ჩვენ გთავაზობთ სპეციალიზებული სტომატოლოგიური სერვისების სპექტრს, რათა დავაკმაყოფილოთ თქვენი პირის ღრუს ჯანმრთელობის ყველა საჭიროება."
+		},
+		"insurance": {
+			"title": "დაზღვევა და დაფინანსება",
+			"subtitle": "ჩვენ ვთანამშრომლობთ უმეტეს მთავარ სადაზღვევო პროვაიდერებთან და გთავაზობთ მოქნილ დაფინანსების ვარიანტებს.",
+			"sections": {
+				"insurance": {
+					"title": "დაზღვევა",
+					"content": "ჩვენ ვიღებთ უმეტეს მთავარ სტომატოლოგიურ სადაზღვევო გეგმებს და ვართ ქსელში მრავალ პროვაიდერთან. ჩვენი გუნდი დაგეხმარებათ მაქსიმალურად გამოიყენოთ თქვენი სარგებელი."
+				},
+				"payment": {
+					"title": "გადახდის ვარიანტები",
+					"content": "ჩვენ ვიღებთ ნაღდ ფულს, ჩეკებს და ყველა მთავარ საკრედიტო ბარათს თქვენი კომფორტისთვის."
+				},
+				"financing": {
+					"title": "დაფინანსება",
+					"content": "ჩვენ გთავაზობთ მოქნილ დაფინანსების ვარიანტებს CareCredit-ის მეშვეობით, რათა სტომატოლოგიური მოვლა უფრო ხელმისაწვდომი გავხადოთ."
+				}
+			},
+			"moreInfo": "დაგვიკავშირდით მეტი ინფორმაციისთვის"
+		},
+		"cta": {
+			"title": "მზად ხართ დასაგეგმად?",
+			"subtitle": "დაჯავშნეთ თქვენი ვიზიტი დღეს და გადადგით პირველი ნაბიჯი უფრო ჯანმრთელი ღიმილისკენ."
+		}
+	},
+	"contact": {
+		"hero": {
+			"title": "დაგვიკავშირდით",
+			"subtitle": "ჩვენ აქ ვართ, რომ ვუპასუხოთ თქვენს შეკითხვებს და დაგეხმაროთ თქვენი ვიზიტის დაგეგმვაში."
+		},
+		"info": {
+			"title": "დაგვიკავშირდით",
+			"subtitle": "გაქვთ შეკითხვები ან მზად ხართ დასაგეგმად? დაუკავშირდით ჩვენს მეგობრულ გუნდს.",
+			"location": {
+				"title": "მდებარეობა",
+				"address": "123 Dental Way, Cityville, ST 12345",
+				"detail": "მოხერხებულად მდებარეობს Cityville-ის ცენტრში, საკმარისი პარკირებით."
+			},
+			"phone": {
+				"title": "ტელეფონი",
+				"number": "(555) 123-4567",
+				"detail": "დაგვირეკეთ სამუშაო საათებში ჩვენს გუნდთან სასაუბროდ."
+			},
+			"email": {
+				"title": "ელ-ფოსტა",
+				"address": "info@Dentiluri.com",
+				"detail": "ჩვენ ვუპასუხებთ თქვენს ელფოსტას 24 სამუშაო საათის განმავლობაში."
+			}
+		},
+		"hours": {
+			"title": "სამუშაო საათები",
+			"weekdays": "ორშაბათი - ხუთშაბათი",
+			"weekdayHours": "8:00 - 18:00",
+			"friday": "პარასკევი",
+			"fridayHours": "8:00 - 17:00",
+			"saturday": "შაბათი",
+			"saturdayHours": "9:00 - 14:00 (შერჩეულ თარიღებში)",
+			"sunday": "კვირა",
+			"sundayHours": "დასვენება"
+		},
+		"social": {
+			"title": "გამოგვყევით",
+			"facebook": "Facebook",
+			"instagram": "Instagram",
+			"twitter": "Twitter",
+			"linkedin": "LinkedIn"
+		},
+		"form": {
+			"title": "გამოგვიგზავნეთ შეტყობინება",
+			"subtitle": "შეავსეთ ქვემოთ მოცემული ფორმა და დაგიკავშირდებით რაც შეიძლება მალე.",
+			"firstName": "სახელი",
+			"lastName": "გვარი",
+			"email": "ელ-ფოსტა",
+			"phone": "ტელეფონი",
+			"subject": "თემა",
+			"message": "შეტყობინება",
+			"sendMessage": "შეტყობინების გაგზავნა"
+		},
+		"map": {
+			"title": "გვიპოვნეთ",
+			"subtitle": "ჩვენ მოხერხებულად ვმდებარეობთ Cityville-ის ცენტრში."
+		},
+		"cta": {
+			"title": "მზად ხართ დასაგეგმად?",
+			"subtitle": "დაჯავშნეთ თქვენი ვიზიტი დღეს და გადადგით პირველი ნაბიჯი უფრო ჯანმრთელი ღიმილისკენ."
+		}
+	},
+	"appointment": {
+		"hero": {
+			"title": "დაჯავშნეთ თქვენი ვიზიტი",
+			"subtitle": "დაგეგმეთ თქვენი სტომატოლოგიური ვიზიტი ონლაინ რამდენიმე მარტივი ნაბიჯით."
+		},
+		"form": {
+			"title": "ჯავშნის დეტალები",
+			"subtitle": "გთხოვთ შეავსოთ ფორმა თქვენი ვიზიტის დასაჯავშნად. ყველა ველი სავალდებულოა.",
+			"firstName": "სახელი",
+			"lastName": "გვარი",
+			"email": "ელ-ფოსტა",
+			"phone": "ტელეფონი",
+			"appointmentType": "ვიზიტის ტიპი",
+			"appointmentTypes": {
+				"select": "აირჩიეთ ვიზიტის ტიპი",
+				"checkup": "რეგულარული შემოწმება და წმენდა",
+				"emergency": "გადაუდებელი ვიზიტი",
+				"consultation": "კონსულტაცია",
+				"cosmetic": "ესთეტიკური სტომატოლოგია",
+				"restorative": "აღდგენითი მკურნალობა",
+				"orthodontic": "ორთოდონტიული მკურნალობა",
+				"pediatric": "პედიატრიული სტომატოლოგია"
+			},
+			"preferredDentist": "სასურველი სტომატოლოგი (არჩევითი)",
+			"dentists": {
+				"noPreference": "არ მაქვს უპირატესობა",
+				"drJohnson": "დოქტ. სარა ჯონსონი",
+				"drChen": "დოქტ. მაიკლ ჩენი",
+				"drRodriguez": "დოქტ. ემილი როდრიგესი",
+				"drWilson": "დოქტ. ჯეიმს უილსონი"
+			},
+			"newPatient": "ახალი პაციენტი ხართ?",
+			"yes": "დიახ",
+			"no": "არა",
+			"notes": "დამატებითი შენიშვნები (არჩევითი)",
+			"notesPlaceholder": "გთხოვთ გაგვიზიაროთ ნებისმიერი კონკრეტული პრობლემა ან შეკითხვა, რომელიც გაქვთ.",
+			"requestAppointment": "ვიზიტის მოთხოვნა"
+		},
+		"timeSlots": {
+			"title": "ხელმისაწვდომი დროის სლოტები",
+			"subtitle": "აირჩიეთ თარიღი და დრო, რომელიც საუკეთესოდ მუშაობს თქვენთვის. ჩვენი გუნდი დაადასტურებს თქვენს ვიზიტს.",
+			"chooseDate": "აირჩიეთ თარიღი",
+			"chooseTime": "აირჩიეთ დრო",
+			"dateSub": "აირჩიეთ ხელმისაწვდომი თარიღებიდან ქვემოთ მოცემულ კალენდარში",
+			"timeSub": "აირჩიეთ ხელმისაწვდომი დროის სლოტებიდან 15 აპრილი, 2025-სთვის"
+		},
+		"expectation": {
+			"title": "რა უნდა ელოდოთ",
+			"subtitle": "ინფორმაცია თქვენი მომავალი ვიზიტისთვის",
+			"points": [
+				"გთხოვთ მოხვიდეთ 15 წუთით ადრე ნებისმიერი საჭირო დოკუმენტაციის შესავსებად.",
+				"თან იქონიეთ თქვენი სადაზღვევო ბარათი და პირადობის მოწმობა.",
+				"თუ გაქვთ სტომატოლოგიური რენტგენი ბოლო 6 თვის განმავლობაში, გთხოვთ თან იქონიოთ."
+			],
+			"questions": "შეკითხვები გაქვთ? დაგვიკავშირდით"
+		}
+	}
+}
