--- a/assets/js/i18n/ge.json
+++ b/assets/js/i18n/ge.json
@@ -21,7 +21,9 @@
 	"home": {
 		"hero": {
 			"title": "ჯანსაღი და ლამაზი ღიმილი - მარტივად!",
-			"subtitle": "ჩვენი სტომატოლოგები უზრუნველყოფენ თქვენი პირის ღრუს ჯანმრთელობასა და თქვენს ბედნიერ ღიმილს."
+			"subtitle": "ჩვენი სტომატოლოგები უზრუნველყოფენ თქვენი პირის ღრუს ჯანმრთელობასა და თქვენს ბედნიერ ღიმილს.",
+			"btn1": "დაჯავშნეთ ვიზიტი",
+			"btn2": "ჩვენი სერვისები"
 		},
 		"services": {
 			"title": "სრული სტომატოლოგიური მომსახურება",
