--- a/assets/js/i18n/ge.json
+++ b/assets/js/i18n/ge.json
@@ -57,7 +57,24 @@
 		"team": {
 			"title": "გაიცანით ჩვენი სტომატოლოგიური გუნდი",
 			"subtitle": "ჩვენი გამოცდილი სტომატოლოგები და პერსონალი ერთგულია უმაღლესი ხარისხის მომსახურების გაწევისა.",
-			"meetFullTeam": "გაიცანით ჩვენი სრული გუნდი"
+			"meetFullTeam": "გაიცანით ჩვენი სრული გუნდი",
+			"teamInfo": {
+				"dr1": {
+					"name": "დოქტორი სარა ჯონსონი",
+					"title": "ზოგადი სტომატოლოგი",
+					"bio": "დოქტორ ჯონსონს აქვს 15 წელზე მეტი გამოცდილება ზოგად და კოსმეტიკურ სტომატოლოგიაში."
+				},
+				"dr2": {
+					"name": "დოქტორი მაიკლ ჩენი",
+					"title": "ორთოდონტი",
+					"bio": "დოქტორი ჩენი სპეციალიზირებულია ორთოდონტიაში და არის Invisalign მკურნალობის ექსპერტი."
+				},
+				"dr3": {
+					"name": "დოქტორი ემილი როდრიგესი",
+					"title": "ბავშვთა სტომატოლოგი",
+					"bio": "დოქტორ როდრიგესს უყვარს ბავშვებთან მუშაობა და სტომატოლოგიურ ვიზიტებს საინტერესო და სტრესისგან თავისუფალს ხდის."
+				}
+			}
 		},
 		"testimonials": {
 			"title": "რას ამბობენ ჩვენი პაციენტები",
