--- a/assets/js/i18n/ge.json
+++ b/assets/js/i18n/ge.json
@@ -78,7 +78,17 @@
 		},
 		"testimonials": {
 			"title": "რას ამბობენ ჩვენი პაციენტები",
-			"badge": "გამოხმაურებები"
+			"badge": "გამოხმაურებები",
+			"testimonialList": {
+				"item1": {
+					"author": "- ჯენიფერ ლ.",
+					"text": "წლებია დენტილური-ში დავდივარ და ყოველთვის დადებითი გამოცდილება მქონდა. პერსონალი მეგობრულია და დოქტორი ჯონსონი საფუძვლიანი და ნაზია."
+				},
+				"item2": {
+					"author": "- მარკ ტ.",
+					"text": "ჩემს ბავშვებს უყვართ დოქტორ როდრიგესთან სიარული! ის მათ კომფორტულად აგრძნობინებთ და ყველაფერს ისე უხსნის, რომ მათ ესმით. ძალიან ვურჩევ ოჯახებს."
+				}
+			}
 		},
 		"appointment": {
 			"title": "დაჯავშნეთ თქვენი ვიზიტი",
