--- a/assets/js/i18n/ge.json
+++ b/assets/js/i18n/ge.json
@@ -22,7 +22,7 @@
 		"hero": {
 			"title": "ჯანსაღი და ლამაზი ღიმილი - მარტივად!",
 			"subtitle": "ჩვენი სტომატოლოგები უზრუნველყოფენ თქვენი პირის ღრუს ჯანმრთელობასა და თქვენს ბედნიერ ღიმილს.",
-			"btn1": "დაჯავშნეთ ვიზიტი",
+			"btn1": "დაგვირეკეთ ახლავე",
 			"btn2": "ჩვენი სერვისები"
 		},
 		"services": {
@@ -106,7 +106,7 @@
 				"title": "დაზღვევის მიღება",
 				"description": "ჩვენ ვთანამშრომლობთ უმეტეს მთავარ სადაზღვევო კომპანიებთან"
 			},
-			"scheduleNow": "დაჯავშნეთ ახლავე"
+			"callNow": "დაგვირეკეთ ახლავე"
 		},
 		"contact": {
 			"title": "დაგვიკავშირდით",
@@ -179,7 +179,9 @@
 		},
 		"cta": {
 			"title": "მზად ხართ დასაგეგმად?",
-			"subtitle": "ჩვენ ვიღებთ ახალ პაციენტებს და გვიხარია მოგესალმოთ ჩვენს სტომატოლოგიურ ოჯახში."
+			"subtitle": "ჩვენ ვიღებთ ახალ პაციენტებს და გვიხარია მოგესალმოთ ჩვენს სტომატოლოგიურ ოჯახში.",
+			"callNow": "დაგვირეკეთ ახლავე",
+			"contactUs": "დაგვიკავშირდით"
 		}
 	},
 	"services": {
@@ -248,10 +250,6 @@
 				}
 			},
 			"moreInfo": "დაგვიკავშირდით მეტი ინფორმაციისთვის"
-		},
-		"cta": {
-			"title": "მზად ხართ დასაგეგმად?",
-			"subtitle": "დაჯავშნეთ თქვენი ვიზიტი დღეს და გადადგით პირველი ნაბიჯი უფრო ჯანმრთელი ღიმილისკენ."
 		}
 	},
 	"contact": {
@@ -310,67 +308,6 @@
 		"map": {
 			"title": "გვიპოვნეთ",
 			"subtitle": "ჩვენ მოხერხებულად ვმდებარეობთ Cityville-ის ცენტრში."
-		},
-		"cta": {
-			"title": "მზად ხართ დასაგეგმად?",
-			"subtitle": "დაჯავშნეთ თქვენი ვიზიტი დღეს და გადადგით პირველი ნაბიჯი უფრო ჯანმრთელი ღიმილისკენ."
-		}
-	},
-	"appointment": {
-		"hero": {
-			"title": "დაჯავშნეთ თქვენი ვიზიტი",
-			"subtitle": "დაგეგმეთ თქვენი სტომატოლოგიური ვიზიტი ონლაინ რამდენიმე მარტივი ნაბიჯით."
-		},
-		"form": {
-			"title": "ჯავშნის დეტალები",
-			"subtitle": "გთხოვთ შეავსოთ ფორმა თქვენი ვიზიტის დასაჯავშნად. ყველა ველი სავალდებულოა.",
-			"firstName": "სახელი",
-			"lastName": "გვარი",
-			"email": "ელ-ფოსტა",
-			"phone": "ტელეფონი",
-			"appointmentType": "ვიზიტის ტიპი",
-			"appointmentTypes": {
-				"select": "აირჩიეთ ვიზიტის ტიპი",
-				"checkup": "რეგულარული შემოწმება და წმენდა",
-				"emergency": "გადაუდებელი ვიზიტი",
-				"consultation": "კონსულტაცია",
-				"cosmetic": "ესთეტიკური სტომატოლოგია",
-				"restorative": "აღდგენითი მკურნალობა",
-				"orthodontic": "ორთოდონტიული მკურნალობა",
-				"pediatric": "პედიატრიული სტომატოლოგია"
-			},
-			"preferredDentist": "სასურველი სტომატოლოგი (არჩევითი)",
-			"dentists": {
-				"noPreference": "არ მაქვს უპირატესობა",
-				"drJohnson": "დოქტ. სარა ჯონსონი",
-				"drChen": "დოქტ. მაიკლ ჩენი",
-				"drRodriguez": "დოქტ. ემილი როდრიგესი",
-				"drWilson": "დოქტ. ჯეიმს უილსონი"
-			},
-			"newPatient": "ახალი პაციენტი ხართ?",
-			"yes": "დიახ",
-			"no": "არა",
-			"notes": "დამატებითი შენიშვნები (არჩევითი)",
-			"notesPlaceholder": "გთხოვთ გაგვიზიაროთ ნებისმიერი კონკრეტული პრობლემა ან შეკითხვა, რომელიც გაქვთ.",
-			"requestAppointment": "ვიზიტის მოთხოვნა"
-		},
-		"timeSlots": {
-			"title": "ხელმისაწვდომი დროის სლოტები",
-			"subtitle": "აირჩიეთ თარიღი და დრო, რომელიც საუკეთესოდ მუშაობს თქვენთვის. ჩვენი გუნდი დაადასტურებს თქვენს ვიზიტს.",
-			"chooseDate": "აირჩიეთ თარიღი",
-			"chooseTime": "აირჩიეთ დრო",
-			"dateSub": "აირჩიეთ ხელმისაწვდომი თარიღებიდან ქვემოთ მოცემულ კალენდარში",
-			"timeSub": "აირჩიეთ ხელმისაწვდომი დროის სლოტებიდან 15 აპრილი, 2025-სთვის"
-		},
-		"expectation": {
-			"title": "რა უნდა ელოდოთ",
-			"subtitle": "ინფორმაცია თქვენი მომავალი ვიზიტისთვის",
-			"points": [
-				"გთხოვთ მოხვიდეთ 15 წუთით ადრე ნებისმიერი საჭირო დოკუმენტაციის შესავსებად.",
-				"თან იქონიეთ თქვენი სადაზღვევო ბარათი და პირადობის მოწმობა.",
-				"თუ გაქვთ სტომატოლოგიური რენტგენი ბოლო 6 თვის განმავლობაში, გთხოვთ თან იქონიოთ."
-			],
-			"questions": "შეკითხვები გაქვთ? დაგვიკავშირდით"
 		}
 	}
 }
